fixing spacing in <screen> elements

--- a/toolkit/css/default.css
+++ b/toolkit/css/default.css
@@ -52,7 +52,7 @@ th
 
 pre {
 	font-family: monospace;
-    font-size: 1em;
+    /*font-size: 1em;*/
     display: block;
 	padding: 10px;
     background-color: #BAD4FF;
@@ -67,7 +67,7 @@ pre {
 
 .screen {
 	font-family: monospace;
-	font-size: 1em;
+	/*font-size: 1em;*/
 	display: block;
 	padding: 10px;
 	border: 1px solid #02007F;
